Fix apache ids (#50)
* Fix apache ids

* Change "Committer" to "Committer, PPMC Member"

* Mark Laszlo Kishalmi as committer and PPMC member

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -31,7 +31,7 @@
 The Apache NetBeans (incubating) Team members (sorted alphabetically).
 
 === Alexander Simon 
-Committer
+Committer, PPMC Member
 
   - apache id: alexvsimon 
   - Oracle, St. Petersburg, Russia 
@@ -39,7 +39,7 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Anton Epple 
-Committer
+Committer, PPMC Member
 
   - apache id: monacotoni 
   - Dukehoff GmbH, Munich, Germany 
@@ -47,7 +47,7 @@ Committer
   -  http://dukescript.com http://twitter.com/@monacotoni 
 
 === Antonio Vieiro 
-Committer
+Committer, PPMC Member
 
   - apache id: vieiro 
   - Spain 
@@ -55,7 +55,7 @@ Committer
   -  http://vieiro.net 
 
 === Aristides Villarreal 
-Committer
+Committer, PPMC Member
 
   - apache id: avbravo 
   - Panama 
@@ -63,7 +63,7 @@ Committer
   - http://twitter.com/@avbravo, http://avbravo.blogspot.com 
 
 === Attila Kelemen 
-Committer
+Committer, PPMC Member
 
   - apache id: kelemen 
   - Hungary 
@@ -71,7 +71,7 @@ Committer
   -  https://github.com/kelemen 
 
 === Benno Markiewicz 
-Committer
+Committer, PPMC Member
 
   - apache id: markiewb 
   - Leipzig, Germany 
@@ -79,7 +79,6 @@ Committer
   - http://twitter.com/@benM4 https://benkiew.wordpress.com/ 
 
 === Bernd Ruehlicke
-  - apache id: bruehlicke 
   - Eriksfiord, Inc.,  Houston, TX, USA 
   - Platform, Database, JavaFX, Ant 
   -  http://bruehlicke.blogspot.com/ 
@@ -93,25 +92,23 @@ Incubation Mentor
   - http://grep.codeconsult.ch 
 
 === Bruno Flávio 
-Committer
+Committer, PPMC Member
 
   - apache id: brunoflavio 
   - Porto, Portugal 
   - Groovy / Grails support 
 
 === Caoyuan Deng
-  - apache id: dcaoyuan 
   - Victoria, BC, Canada 
   - Scala, Akka 
   -  https://github.com/dcaoyuan 
 
 === Cezariusz Marek
-  - apache id: cezariusz.marek 
   - Poland 
   - Java, Platform, C/C++, NetCAT 
 
 === Christian Lenz 
-Committer
+Committer, PPMC Member
 
   - apache id: chrizzly 
   - Leipzig, Germany 
@@ -119,7 +116,7 @@ Committer
   -  https://github.com/Chris2011 https://www.facebook.com/Chrizzly42 
 
 === Christian Stolz 
-Committer
+Committer, PPMC Member
 
   - apache id: chst 
   - Janitza electronics GmbH 
@@ -127,7 +124,7 @@ Committer
   - Platform, Java 
 
 === Constantin Drabo 
-Committer
+Committer, PPMC Member
 
   - apache id: pandaconstantin 
   - Université de Ouagadougou, Ouagadougou, Burkina Faso 
@@ -140,7 +137,7 @@ Committer
   -  https://cwiki.apache.org/confluence/display/~dschoorl 
 
 === David Heffelfinger 
-Committer
+Committer, PPMC Member
 
   - apache id: dheffelfinger 
   - Ensode Technology, LLC,  Fairfax, VA, USA 
@@ -148,26 +145,25 @@ Committer
   -  http://www.ensode.net/roller/dheffelfinger/ 
 
 === Danila Sergeyev 
-Committer
+Committer, PPMC Member
 
+  - apache id: dsergeyev 
   - Oracle, St. Petersburg, Russia 
   - C/C++: editor hints, call graph, code refactorings; Docker 
   -  NetBeans C/C++ Support 
 
 === Djamel Torche
-  - apache id: djamdev 
   - AXA, Algeria 
   - Java, JavaFX, Platform & API Support, Tutorials & Translations 
   - , My LinkedIn Profile GitHub 
 
 === Dmitry Avtonomov
-  - apache id: chhh 
   - University of Michigan, Ann Arbor, MI, USA 
   - Platform, Tutorials 
   -  BatMass - mass spectrometry visualization tools 
 
 === Dmitry Zharkov 
-Committer
+Committer, PPMC Member
 
   - apache id: dimazh 
   - Oracle, St. Petersburg, Russia 
@@ -175,16 +171,17 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Emmanuel Hugonnet 
-Committer
+Committer, PPMC Member
 
   - apache id: ehsavoie 
   - Red Hat, Barraux, France 
   - WildFly plugin 
 
 === Emmanel Lécharny
+Incubation Mentor
+
   - apache id: elecharny 
   - Symas, Paris, France 
-  - Incubation mentor 
   -  http://hrabal.blogspot.com/ 
 
 === Eric Barboni
@@ -193,7 +190,7 @@ Committer
   - maven, platform, java editor 
 
 === Ernest Lotter 
-Committer
+Committer, PPMC Member
 
   - apache id: elotter 
   - Institute of Mine Seismology, Hobart, Australia 
@@ -201,20 +198,19 @@ Committer
   -  https://www.facebook.com/ernest.lotter 
 
 === Fabrizio Giudici
-  - apache id: fabrizio.giudici 
   - Tidalwave s.a.s., Genoa / Milan, Italy 
   - IDE, Maven, Docker, JavaFX 
   -  http://tidalwave.it/fabrizio/blog/ 
 
 === Florian Vogler 
-Committer
+Committer, PPMC Member
 
   - apache id: fvogler 
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaEE, Groovy, Gradle, Maven, Module System 
 
 === Gaurav Gupta 
-Committer
+Committer, PPMC Member
 
   - apache id: jgauravgupta 
   - Bangalore, India 
@@ -222,7 +218,7 @@ Committer
   -  https://jeddict.github.io http://twitter.com/@jGauravGupta http://twitter.com/@ImJeddict 
 
 === Geertjan Wielenga 
-Committer
+Committer, PPMC Member
 
   - apache id: geertjan 
   - Oracle, Amsterdam, Netherlands 
@@ -230,7 +226,7 @@ Committer
   - blogs.oracle.com/geertjan 
 
 === Georgia Ingham 
-Committer
+Committer, PPMC Member
 
   - apache id: georgia 
   - IDRsolutions, Leicester, UK 
@@ -238,17 +234,15 @@ Committer
   -  NetBeans articles on IDR blog 
 
 === Ghader Arkani
-  - apache id: rasa-app 
   - Tehran, Iran 
   - Java, Java EE, Spring, Hibernate, Angular 
 
 === Giuseppe Tino
-  - apache id: gt 
   - Amadeus IT Group, Nice
   - Java, Java EE, Debugger, Git, Junit 
 
 === Hermien Pellissier 
-Committer
+Committer, PPMC Member
 
   - apache id: hermien 
   - Reutech Communications, Centurion, South Africa 
@@ -256,7 +250,7 @@ Committer
   -  NetBeans Ruminations 
 
 === Ilia Gromov 
-Committer
+Committer, PPMC Member
 
   - apache id: igromov 
   - Oracle, St. Petersburg, Russia 
@@ -264,12 +258,11 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Illya Kysil
-  - apache id: ikysil 
   - Luxembourg 
   - Java, JavaEE, Platform, VCS 
 
 === Ioannis Kostaras 
-Committer
+Committer, PPMC Member
 
   - apache id: ikost 
   - Liége, Belgium 
@@ -277,26 +270,24 @@ Committer
   - , blog 
 
 === Jan Lahoda 
-Committer
+Committer, PPMC Member
 
   - apache id: jlahoda 
   - Oracle, Czech Republic 
   - Java editor/support, Editor 
 
 === Jens Deters
-  - apache id: jdeters 
   - codecentric AG, Germany 
   - Java, JavaFX, Scala, IoT, Docker, Tutorials 
   - http://twitter.com/@jerady 
 
 === Jens Hofschröer
-  - apache id: nigjo 
   - WZL of RWTH Aachen University, Aachen, Germany 
   - Platform, Java, Swing, Annotations 
   -  http://blog.nigjo.de http://twitter.com/@nigjo 
 
 === Jesse Glick 
-Committer
+Committer, PPMC Member
 
   - apache id: jglick 
   - CloudBees, North Carolina USA 
@@ -304,26 +295,28 @@ Committer
   - http://twitter.com/@tyvole 
 
 === Jim Jagielski
+Incubation Mentor
+
   - apache id: jim 
   - Forest Hill, MD USA 
-  - Incubation Mentor 
   - http://twitter.com/@jimjag 
 
 === Jiri Kovalsky 
-Committer
+Committer, PPMC Member
 
   - apache id: jkovalsky 
   - Oracle, Bohumin, Czech Republic 
   - Java, Plugins, NetCAT 
 
 === John McDonnell
-Committer
+Committer, PPMC Member
 
+  - apache id: johnmcdonnell 
   - BearingPoint Ireland, Dublin, Ireland 
   - Maven, Java EE, Docker 
 
 === John Brock 
-Committer
+Committer, PPMC Member
 
   - apache id: peppertech 
   - Oracle, Seattle, WA. USA 
@@ -337,7 +330,7 @@ Committer
   -  http://www.jujens.eu/ 
 
 === Junichi Yamamoto 
-Committer
+Committer, PPMC Member
 
   - apache id: junichi11 
   - Fukuoka, Japan 
@@ -345,19 +338,21 @@ Committer
   -  http://junichi11.com/ http://twitter.com/@junichi_11 
 
 === Ken Fogel
-  - apache id: kfogel 
   - Dawson College, Montreal, Quebec, Canada 
   - Java, JavaFX, JavaServer Faces, Education 
   -  https://www.omnijava.com https://www.dawsoncollege.qc.ca/computer-science-technology/ http://twitter.com/@omniprof 
 
 === Kenrik Veenstra 
-Committer
-
   - Corizon, Groningen, the Netherlands 
   - Platform, Maven, JavaFX 
 
+=== Laszlo Kishalmi 
+Committer, PPMC Member
+
+  - apache id: lkishalmi 
+
 === Leonardo Zanivan 
-Committer
+Committer, PPMC Member
 
   - apache id: panga 
   - Aurea Software, Criciúma, Brazil 
@@ -370,13 +365,12 @@ Committer
   -  http://twitter.com/@lhochet 
 
 === Marcelo Aleksandravicius
-  - apache id: aleksmarcelo 
   - Computer Forensic, Rio de Janeiro, Brazil 
   - Platform, C/C++, Tutorials, Installer, Visual Library 
   - http://twitter.com/@AleksMarcelo 
 
 === Maria Dalmatova 
-Committer
+Committer, PPMC Member
 
   - apache id: mromashova 
   - Oracle, St. Petersburg, Russia 
@@ -384,7 +378,7 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Mark Stephens 
-Committer
+Committer, PPMC Member
 
   - apache id: markee174 
   - IDRsolutions, Tonbridge, Kent, UK 
@@ -392,14 +386,14 @@ Committer
   -  NetBeans articles on IDR blog 
 
 === Martin Klähn 
-Committer
+Committer, PPMC Member
 
   - apache id: mklaehn 
   - Airbus Defence and Space, Bodensee, Germany 
   - Platform, JavaFX, JavaEE, Groovy, Gradle 
 
 === Michael Müller 
-Committer
+Committer, PPMC Member
 
   - apache id: muellermi 
   - Germany 
@@ -407,21 +401,21 @@ Committer
   -  Michael's Blog Michael Müller 
 
 === Matthias Bläsing 
-Committer
+Committer, PPMC Member
 
   - apache id: matthiasblaesing 
   - Germany 
   - Database, XML 
 
 === Neil C Smith 
-Committer
+Committer, PPMC Member
 
+  - apache id: neilcsmith 
   - Praxis LIVE, Oxford, UK 
   - Platform, API Support, Java editor/support 
   -  NetBeans articles in Praxis LIVE blog 
 
 === Nelson Cazonda
-  - apache id: cazonda 
   - BCI - Banco Comercial e de Investimentos, Maputo, Mozambique 
   - Platform, Editor, Java EE, Maven, Gradle 
 
@@ -431,7 +425,7 @@ Committer
   -  https://github.com/orat 
 
 === Petr Kudriavtsev 
-Committer
+Committer, PPMC Member
 
   - apache id: petrk 
   - Oracle, St. Petersburg, Russia 
@@ -439,13 +433,11 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Ricardo Pacheco
-  - apache id: rcpacheco 
   - Aleph5, México 
   - NetBeans Platform, Java, JavaFX, Tutorials 
   -  https://github.com/rcpacheco 
 
 === Richard Lowery
-  - apache id: loweryr 
   - Charlotte, NC, USA 
   - Platform, Maven, JavaEE, Cassandra 
   - http://twitter.com/@rhlowery 
@@ -455,7 +447,7 @@ Committer
   - Java, C/C++, Embedded, XML, Maven, Domain Specific Languages 
 
 === Steven Yi 
-Committer
+Committer, PPMC Member
 
   - apache id: stevenyi 
   - Rochester, NY, USA 
@@ -467,7 +459,7 @@ Committer
   -  https://github.com/subhash-koganti 
 
 === Sven Reimers 
-Committer
+Committer, PPMC Member
 
   - apache id: sreimers 
   - Airbus Defence and Space, Bodensee, Germany 
@@ -481,20 +473,19 @@ Committer
   -  https://github.com/thilina01
 
 === Thomas Kruse
-  - apache id: everflux 
   - trion development, Münster, Germany 
   - Spring Boot, Maven, Angular 
   - http://twitter.com/@everflux 
 
 === Timon Veenstra 
-Committer
+Committer, PPMC Member
 
   - apache id: timon 
   - Corizon, Groningen, the Netherlands 
   - Platform, Maven, API Support, JavaFX 
 
 === Tushar Joshi 
-Committer
+Committer, PPMC Member
 
   - apache id: tusharjoshi 
   - Persistent Systems, Nagpur, Maharashtra, India 
@@ -502,7 +493,7 @@ Committer
   -  NetBeans IDE Blog by Tushar Joshi 
 
 === Vladimir Kvashin 
-Committer
+Committer, PPMC Member
 
   - apache id: vkvashin 
   - Oracle, St. Petersburg, Russia 
@@ -510,7 +501,7 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Vladimir Voskresensky 
-Committer
+Committer, PPMC Member
 
   - apache id: vladimirvv 
   - Oracle, St. Petersburg, Russia 
@@ -518,7 +509,7 @@ Committer
   -  NetBeans C/C++ Support 
 
 === Wade Chandler 
-Committer
+Committer, PPMC Member
 
   - apache id: wadechandler 
   - Knoxville, TN, USA 
@@ -526,12 +517,11 @@ Committer
   - http://twitter.com/@wadechandler, wadechandler.com 
 
 === Yonathan Kidanemariam
-  - apache id: ytn01 
   - Information Builders, New Jersey, USA 
   - Platform, Editor, Tutorials 
 
 === Zoran Sevarac 
-Committer
+Committer, PPMC Member
 
   - apache id: sevarac 
   - University of Belgrade, Faculty of Organizational Sciences, Belgrade, Serbia 
