Removed some RC1 from some pages, updated date

--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -34,7 +34,7 @@ for important requirements for download pages for Apache projects.
 
 == Apache NetBeans 9.0 Release
 
-Apache NetBeans (incubating) 9.0 RC1 announced on the XXth of July, 2018.
+Apache NetBeans (incubating) 9.0 announced on the 1st of August, 2018.
 
 === Main features
 
@@ -46,7 +46,7 @@ See link:/download/nb90/index.html[Apache NetBeans 9.0 Features] for a full list
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https is recommended.
 ////
-Apache NetBeans 9.0 RC1 is available for download from your closest Apache mirror. For this release no installers are provided, please just download the binaries and unzip them.
+Apache NetBeans 9.0 is available for download from your closest Apache mirror. For this release no installers are provided, please just download the binaries and unzip them.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC], 
