Fixes the 9.0 links, date and vote permalink emails

--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -34,7 +34,7 @@ for important requirements for download pages for Apache projects.
 
 == Apache NetBeans 9.0 Release
 
-Apache NetBeans (incubating) 9.0 announced on the 1st of August, 2018.
+Apache NetBeans (incubating) 9.0 announced on the 29th of July, 2018.
 
 === Main features
 
@@ -48,12 +48,12 @@ NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https 
 ////
 Apache NetBeans 9.0 is available for download from your closest Apache mirror. For this release no installers are provided, please just download the binaries and unzip them.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC], 
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-source.zip.sha1[SHA-1])
-- Binaries: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-bin.zip[incubating-netbeans-java-9.0-bin.zip] ( 
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-bin.zip.asc[PGP ASC],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-bin.zip.sha1[SHA-1])
+- Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC],
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.sha1[SHA-1])
+- Binaries: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip[incubating-netbeans-java-9.0-bin.zip] (
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.asc[PGP ASC],
+link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.sha1[SHA-1])
 
 ////
 NOTE: Using https below is highly recommended.
@@ -68,11 +68,10 @@ The sources for this release have been tagged as link:https://github.com/apache/
 
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
-#- link:https://lists.apache.org/thread.html/c2a06adc83e2819e6d96c7dff8d0e22a97001f99bfda12515d4d9609@%3Cdev.netbeans.apache.org%3E[PPMC vote]
-#- link:https://lists.apache.org/thread.html/94f7a5e4601e26c7edb8264df7df53dd8ed215ecfc568816a162f2af@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
-#- link:https://lists.apache.org/thread.html/13af566fb266308d0a91c3e860d22fb1766464df9fe94126d74084fb@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
-#- link:https://lists.apache.org/thread.html/8f15a994bc613c7c0915063c6b8cfde7d584c425f8566cd93d20fe57@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
-#- link:https://lists.apache.org/thread.html/1eb3e248e4f4f980ee21d4d3d103ed7ce17020e62489ba4be89e0a9a@%3Cgeneral.incubator.apache.org%3E[IPMC announce]
+#- link:https://lists.apache.org/thread.html/a644bb8e3ba2cbd06328bb004f1b18b4171763cd3d78a9131615f687@%3Cdev.netbeans.apache.org%3E[PPMC vote]
+#- link:https://lists.apache.org/thread.html/31f8a8fd70dc2ba635c6a67693c512ed9e5b30af99fbe79afe55293b@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
+#- link:https://lists.apache.org/thread.html/ab58e2c75d260a91851d8def412b1ef6648aaf4f690b205aaaf53924@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
+#- link:https://lists.apache.org/thread.html/0cdb410ae900833f32c9d9546c8bf2580e54e8777a869240241b84b2@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 #
 === Known issues
 
