--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -38,7 +38,7 @@ for important requirements for download pages for Apache projects.
 === Apache NetBeans 9.0
 
 - link:nb90/[Apache NetBeans 9.0 Features]
-- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 1st of August, 2018.
+- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 29th of July, 2018.
 - link:nb90/nb90-rc1.html[Apache NetBeans 9.0 RC1], released on the 28th of May, 2018.
 - link:nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
 
