--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -68,11 +68,11 @@ The sources for this release have been tagged as link:https://github.com/apache/
 
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
-#- link:https://lists.apache.org/thread.html/a644bb8e3ba2cbd06328bb004f1b18b4171763cd3d78a9131615f687@%3Cdev.netbeans.apache.org%3E[PPMC vote]
-#- link:https://lists.apache.org/thread.html/31f8a8fd70dc2ba635c6a67693c512ed9e5b30af99fbe79afe55293b@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
-#- link:https://lists.apache.org/thread.html/ab58e2c75d260a91851d8def412b1ef6648aaf4f690b205aaaf53924@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
-#- link:https://lists.apache.org/thread.html/0cdb410ae900833f32c9d9546c8bf2580e54e8777a869240241b84b2@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
-#
+- link:https://lists.apache.org/thread.html/a644bb8e3ba2cbd06328bb004f1b18b4171763cd3d78a9131615f687@%3Cdev.netbeans.apache.org%3E[PPMC vote]
+- link:https://lists.apache.org/thread.html/31f8a8fd70dc2ba635c6a67693c512ed9e5b30af99fbe79afe55293b@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
+- link:https://lists.apache.org/thread.html/ab58e2c75d260a91851d8def412b1ef6648aaf4f690b205aaaf53924@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
+- link:https://lists.apache.org/thread.html/0cdb410ae900833f32c9d9546c8bf2580e54e8777a869240241b84b2@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
+
 === Known issues
 
 Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+9.0[this confluence page] for a list of known issues.
