Creating NekoBean's page to netbeans.apache.org (#68)

--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -38,3 +38,5 @@ NetBeans users and developers participate in link:events.html[different events].
 The Apache NetBeans source code was donated by Oracle to the link:https://www.apache.org[Apache Software Foundation] in 2016.
 Since then many contributors have joined the project. Find out link:who.html[who is who], and link:committer.html[how to become a committer].
 
+== link:nekobean.html[NekoBean]
+link:nekobean.html[NekoBean] is a mascot of Apache NetBeans Community.
