Add png files for download

--- a/netbeans.apache.org/src/content/community/nekobean.asciidoc
+++ b/netbeans.apache.org/src/content/community/nekobean.asciidoc
@@ -50,40 +50,40 @@ link:http://nekobean.net/present/dl/svg.zip[Download SVG files as a zip]
 .NekoBean
 [#nekobean]
 [caption="", align="center"]
-image::nekobean250x250.png[NekoBean, 250, 250] |
+image::nekobean250x250.png[NekoBean, 250, 250, link=nekobean.png] |
 
 .Happy
 [#nekobean-happy]
 [caption="", align="center"]
-image::nekobean_happy250x250.png[NekoBean, 250, 250] |
+image::nekobean_happy250x250.png[NekoBean, 250, 250, link=nekobean_happy.png] |
 
 .Smile
 [#nekobean-smile]
 [caption="", align="center"]
-image::nekobean_smile250x250.png[NekoBean, 250, 250] 
+image::nekobean_smile250x250.png[NekoBean, 250, 250, link=nekobean_smile.png] 
 
 |
 .Sad
 [#nekobean-sad]
 [caption="", align="center"]
-image::nekobean_sad250x250.png[NekoBean, 250, 250] |
+image::nekobean_sad250x250.png[NekoBean, 250, 250, link=nekobean_sad.png] |
 
 .Zzz...
 [#nekobean-zzz]
 [caption="", align="center"]
-image::nekobean_zzz250x250.png[NekoBean, 250, 250] |
+image::nekobean_zzz250x250.png[NekoBean, 250, 250, link=nekobean_zzz.png] |
 
 .orz
 [#nekobean-orz]
 [caption="", align="center"]
-image::nekobean_orz250x250.png[NekoBean, 250, 250]
+image::nekobean_orz250x250.png[NekoBean, 250, 250, link=nekobean_orz.png]
 
 |
 |
 .With Cat
 [#nekobean-with-cat]
 [caption="", align="center"]
-image::nekobean_with_cat250x250.png[NekoBean, 250, 250]
+image::nekobean_with_cat250x250.png[NekoBean, 250, 250, link=nekobean_with_cat.png]
 |
 
 |===
