--- a/netbeans.apache.org/src/content/community/events.asciidoc
+++ b/netbeans.apache.org/src/content/community/events.asciidoc
@@ -20,12 +20,12 @@
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
-:keywords: Apache NetBeans Events Days
+:keywords: Apache NetBeans Events Days Conferences ApacheCon
 :description: Apache NetBeans Events
 :toc: left
 :toc-title:
 
-== Apache NetBeans Events
+== Apache NetBeans Days
 
 An "Apache NetBeans Day" is a class of event that happens regularly, with a clear definition of what makes an event be part of that class:
 
@@ -37,12 +37,26 @@ An "Apache NetBeans Day" is a class of event that happens regularly, with a clea
 
 For publicizing NetBeans events, the Apache News posts at https://blogs.apache.org/foundation/ can mention those events, best is to contact press@apache.org for that. Apache has an Event Listing (https://events.apache.org/), that we'd also like to make use of.
 
-=== Upcoming Apache NetBeans Days
+=== Apache NetBeans Day UK 2018
 
-Apache NetBeans Day UK 2018::
-To be held at the University of Greenwich campus (London) on April the 27th, 2018. See the link:https://www.eventbrite.co.uk/e/apache-netbeans-day-uk-2018-tickets-43401128945[agenda and details] and the dedicated link:https://twitter.com/NetBeansDayUK[Twitter account].
+Was held at the University of Greenwich campus (London) on April the 27th, 2018. See the link:https://www.eventbrite.co.uk/e/apache-netbeans-day-uk-2018-tickets-43401128945[agenda and details] and the dedicated link:https://twitter.com/NetBeansDayUK[Twitter account].
 
-=== Apache Software Foundation Resources
+== NetBeans in Other Events
+
+This is a list of different events where Apache NetBeans was or will be the subject of one or more sessions or talks:
+
+=== Apache Conference Montreal 2018
+Ken Fogel, "What Makes NetBeans Special", Sept. the 25th, 2018. link:https://apachecon.dukecon.org/acna/2018/#/schedule[click here for more information].
+
+
+== Other Apache Community Events
+
+This is a link to the next Apache Community major event:
+
+[caption="Apache Current Event", link=https://www.apache.org/events/current-event.html]
+image::https://www.apache.org/events/current-event-234x60.png[CurrentEvent,234,60]
+
+== Apache Software Foundation Resources For Events And Conferences
 
 The Apache Software Foundation provides different resources for events and conferences:
 
@@ -55,6 +69,8 @@ and link:https://community.apache.org/speakers/[Speaker information], including 
 - link:https://www.apache.org/events/meetups.html[Upcoming Apache-Related meetups].
 
 Be sure to also check the Apache Software Foundation link:http://community.apache.org/[Apache Community Development] page.
+
+
 
 
 
