--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -46,7 +46,7 @@ See link:/download/nb90/index.html[Apache NetBeans 9.0 Features] for a full list
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against dist.apache.org for the sums & keys. https is recommended.
 ////
-Apache NetBeans 9.0 is available for download from your closest Apache mirror. For this release no installers are provided, please just download the binaries and unzip them.
+Apache NetBeans 9.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip[incubating-netbeans-java-9.0-source.zip] (
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-source.zip.asc[PGP ASC],
@@ -54,6 +54,8 @@ link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/inc
 - Binaries: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip[incubating-netbeans-java-9.0-bin.zip] (
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.asc[PGP ASC],
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-netbeans-java-9.0-bin.zip.sha1[SHA-1])
+
+*Note:* Apache NetBeans community member Carl Mosca has made link:https://github.com/carljmosca/netbeans-macos-bundle[a Mac OSX installation bundle available here].
 
 ////
 NOTE: Using https below is highly recommended.
