--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -57,8 +57,10 @@ link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/inc
 
 *Note:* Apache NetBeans community member Carl Mosca has made link:https://github.com/carljmosca/netbeans-macos-bundle[a Mac OSX installation bundle available here].
 
-Also see tjhe following YouTube clips:
+Also see the following YouTube clips:
+
 link:https://www.youtube.com/watch?v=am-7aa2hYgc[Get Started with NetBeans from a ZIP Archive]
+
 link:https://www.youtube.com/watch?v=I8gdC7BBtbs[Get Started with NetBeans from a Mac OSX Installer]
 
 ////
