--- a/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90.asciidoc
@@ -83,4 +83,4 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 
 === Known issues
 
-Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+9.0+Final+Release[this confluence page] for a list of known issues.
+Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+9.0[this confluence page] for a list of known issues.
