--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -108,5 +108,5 @@ This is a list of Apache NetBeans (incubating) repositories:
 [[previous]]
 == Previous NetBeans versions
 
-You can download previous NetBeans versions by visiting https://netbeans.org/downloads/
+You can download previous Apache NetBeans versions by visiting https://archive.apache.org/dist/incubator/netbeans/, while pre-Apache NetBeans versions are at https://netbeans.org/downloads/.
 
