Style GitHub with capitalization (#87)
gitub -> GitHub.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -81,7 +81,7 @@ link:https://jenkins.io/index.html[Jenkins] is quite busy link:https://builds.ap
 
 You can of course build Apache NetBeans from source. To do so:
 
-. Clone the https://github.com/apache/incubator-netbeans github repository.
+. Clone the https://github.com/apache/incubator-netbeans GitHub repository.
 . Install Oracle's Java 8 or Open JDK v8.
 . Install Apache Ant 1.10 or greater (https://ant.apache.org/).
 
@@ -103,7 +103,7 @@ This is a list of Apache NetBeans (incubating) repositories:
 - https://github.com/apache/incubator-netbeans The main source code repository.
 - https://github.com/apache/incubator-netbeans-website This website's repository.
 - https://github.com/apache/incubator-netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
-- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to github at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
+- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
 
 [[previous]]
 == Previous NetBeans versions
