--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -62,17 +62,17 @@ We appreciate new contributors to adhere to the following guidelines, to make th
 == Learn to run and debug NetBeans IDE or Platform applications
 link:/participate/build-run-debug-tutorials.html[Watch a series of 5 short videos] (2 minutes on average) showing how to build, run and debug the NetBeans IDE or any NetBeans platform application from sources. 
 
-== Contributing to Apache NetBeans in github
+== Contributing to Apache NetBeans in GitHub
 
 === Boostraping (do this once)
 
-Since you don't have write permissions to the github apache mirror, you need to
-fork https://github.com/apache/incubator-netbeans in github, this is done using
-the "fork" button on the top right of the github page.
+Since you don't have write permissions to the GitHub apache mirror, you need to
+fork https://github.com/apache/incubator-netbeans in GitHub, this is done using
+the "fork" button on the top right of the GitHub page.
 
 You then need to clone the forked repository in your computer.
 
-Finally, in your computer, you need to setup your name and email in github.
+Finally, in your computer, you need to setup your name and email in GitHub.
 This will also help git to rebase in order to fulfill its task.
 
 [source, shell]
@@ -100,12 +100,12 @@ Before you can start modifying or upgrading the NetBeans code in your repository
 
 You are now ready to start modifying the NetBeans code. Use `git commit` when appropriate. Note that the commit message related to JIRA issues must start with `[NETBEANS-<issue number>]`.
 
-- Use `git push -u origin mybranch` to create and push the `mybranch` branch in your github fork. 
+- Use `git push -u origin mybranch` to create and push the `mybranch` branch in your GitHub fork. 
 - Use `git push origin mybranch` afterwards.
 
 If you have submitted many different commits it's a good idea to squash them together. See link:#squash[squashing commits on pull requests] for help on this.
 
-Once your code is ready to review create a *pull request* using the github interface. See https://help.github.com/articles/creating-a-pull-request/ for help.
+Once your code is ready to review create a *pull request* using the GitHub interface. See https://help.github.com/articles/creating-a-pull-request/ for help.
 
 === Be patient
 
