--- a/netbeans.apache.org/src/content/participate/build-run-debug-tutorials.asciidoc
+++ b/netbeans.apache.org/src/content/participate/build-run-debug-tutorials.asciidoc
@@ -26,6 +26,13 @@
 :toclevels: 4
 :toc-title: 
 
+[IMPORTANT] 
+.Changes since the videos were made:
+==== 
+. Working with the NetBeans source now requires NB IDE 9 or later.
+. The folder layout of the repository has changed to use sub-folder per cluster.
+====
+
 == Part 1: Hello Apache NetBeans Platform
 video::VC8gQJknPaU[youtube]
 
