--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -108,5 +108,9 @@ This is a list of Apache NetBeans (incubating) repositories:
 [[previous]]
 == Previous NetBeans versions
 
-You can download previous Apache NetBeans versions by visiting https://archive.apache.org/dist/incubator/netbeans/, while pre-Apache NetBeans versions are at https://netbeans.org/downloads/.
+You can download previous Apache NetBeans versions by visiting https://archive.apache.org/dist/incubator/netbeans/, while pre-Apache NetBeans versions are here: 
 
+. https://netbeans.org/downloads/8.2/
+. https://netbeans.org/downloads/8.1/
+. https://netbeans.org/downloads/8.0/
+. https://netbeans.org/downloads/7.4/
