--- a/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb100/nb100.asciidoc
@@ -23,26 +23,23 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloads / Apache NetBeans
+= Apache NetBeans 10.0 / Apache NetBeans
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans download
-:description: Apache NetBeans Download page
+:keywords: Apache NetBeans 10.0 release
+:description: Apache NetBeans 10.0 release information
 :toc: left
 :toc-title:
 
-[[releases]]
-== Current Release
+== Apache NetBeans 10.0 Release
 
-=== Apache NetBeans 10.0
+Apache NetBeans (incubating) 10.0 announced on the 27th of December, 2018.
 
-Apache NetBeans 10.0 is the latest version of the IDE.
+=== Main features
 
-- link:nb100/index.html[Apache NetBeans 10.0 Features]
-- link:nb100/nb100.html[Apache NetBeans 10.0], released on the 27th of December, 2018.
+See link:/download/nb100/index.html[Apache NetBeans 10.0 Features] for a full list of features.
 
-[[downloading]]
 === Downloading
 
 ////
@@ -73,51 +70,21 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
 
-[[source]]
-== Building from source
+=== Building from source
 
-You can of course build Apache NetBeans from source. To do so:
+The sources for this release have been tagged as link:https://github.com/apache/incubator-netbeans/tree/10.0-vc5[10.0-vc5] at github.  See the link:/download/index.html#source[instructions on how to build] this release yourself from the source code.
 
-. Clone the https://github.com/apache/incubator-netbeans GitHub repository.
-. Install Oracle's Java 8 or Open JDK v8.
-. Install Apache Ant 1.10 or greater (https://ant.apache.org/).
+=== Community approval
 
-Once you're all set just enter the `incubator-netbeans` directory and type:
+As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
-- `ant` to build the Apache NetBeans IDE.
-  ** Once built, the IDE bits are placed in the `./nbbuild/netbeans` directory. You can run the IDE from within the `incubator-netbeans` directory by typing `./nbbuild/netbeans/bin/netbeans` on unixes (for Windows the command is equivalent).
-- `ant tryme` to run the Apache NetBeans IDE.
+- link:https://lists.apache.org/thread.html/a06ad60089470b0b52fe7e6f4c271d2fd1dcce722a5fe9b3aa008b3d@%3Cdev.netbeans.apache.org%3E[PPMC vote]
+- link:https://lists.apache.org/thread.html/305d657e57d04df3d4a13c76ab732e64ef72d107fe0f769d5f4bbd80@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
 
-For details, go here: https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment
+- link:https://lists.apache.org/thread.html/12e90e3171b85cb1b2249c59fe25caeefd9f6edf0dc14b9916b0af6f@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
 
-Now that you have built Apache NetBeans from source you may want to link:/participate/submit-pr.html[submit a pull request].
+=== Release information
 
-[[repos]]
-=== Repositories
+Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+10[Apache NetBeans 10 page] for further details.
 
-This is a list of Apache NetBeans (incubating) repositories:
-
-- https://github.com/apache/incubator-netbeans The main source code repository.
-- https://github.com/apache/incubator-netbeans-website This website's repository.
-- https://github.com/apache/incubator-netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
-- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
-
-
-[[previous]]
-== Previous Releases
-
-=== Apache NetBeans 9.0
-
-- link:nb90/[Apache NetBeans 9.0 Features]
-- link:nb90/nb90.html[Apache NetBeans 9.0], released on the 29th of July, 2018.
-- link:nb90/nb90-rc1.html[Apache NetBeans 9.0 RC1], released on the 28th of May, 2018.
-- link:nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
-
-=== Downloads
-
-You can download previous Apache NetBeans versions by visiting https://archive.apache.org/dist/incubator/netbeans/.
-
-=== Older versions
-
-Pre-Apache NetBeans versions are at https://netbeans.org/downloads/.
 
