Links to pre-Apache versions (#93)

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -115,9 +115,13 @@ This is a list of Apache NetBeans (incubating) repositories:
 
 === Downloads
 
-You can download previous Apache NetBeans versions by visiting https://archive.apache.org/dist/incubator/netbeans/.
+You can download previous Apache NetBeans versions by visiting
+https://archive.apache.org/dist/incubator/netbeans/, while pre-Apache NetBeans
+versions are here: 
 
-=== Older versions
+- https://netbeans.org/downloads/8.2/
+- https://netbeans.org/downloads/8.1/
+- https://netbeans.org/downloads/8.0/
+- https://netbeans.org/downloads/7.4/
 
-Pre-Apache NetBeans versions are at https://netbeans.org/downloads/.
 
